implement placeholders for future functions, flesh out skeletons

--- a/config.json
+++ b/config.json
@@ -22,6 +22,12 @@
             "name": "Custom SQL",
             "key": "custom_sql",
             "type": "text"
+        },
+        {
+            "name": "Invoice URL",
+            "key": "invoice_url",
+            "type": "text"
         }
+
     ]
 }
