--- a/config.json
+++ b/config.json
@@ -20,9 +20,15 @@
             "type": "rich-text"
         },
         {
-            "name": "Custom SQL",
-            "key": "custom_sql",
-            "type": "text"
+            "name": "Prebuilt SQL",
+            "key": "prebuilt_sql",
+            "type": "dropdown",
+            "choices": [
+                {
+                    "name": "UF Annual Project Billing: sent invoices",
+                    "value": "SELECT *, concat(\"https://redcap.ctsi.ufl.edu/invoices/invoice-\", invoice_id, \".pdf\") as invoice_url FROM uf_annual_project_billing_invoices WHERE project_id = [project_id] AND invoice_status = 'sent' AND datediff(now(), invoice_created_date) > 340;"
+                }
+            ]
         }
     ]
 }
