--- a/config.json
+++ b/config.json
@@ -38,6 +38,11 @@
                     "value": "SELECT *, concat(\"https://redcap.ctsi.ufl.edu/invoices/invoice-\", invoice_id, \".pdf\") as invoice_url FROM uf_annual_project_billing_invoices LEFT JOIN redcap_projects USING (project_id) WHERE project_id = [project_id] AND invoice_status = 'sent' AND datediff(now(), invoice_created_date) > 340;"
                 }
             ]
+        },
+        {
+            "name": "Require a non-empty query result",
+            "key": "query_result_required",
+            "type": "checkbox"
         }
     ],
     "compatibility": {
