Update CHANGELOG and config.json for release 1.0.1

--- a/config.json
+++ b/config.json
@@ -21,6 +21,11 @@
             "name": "Philip Chase",
             "email": "pbc@ufl.edu",
             "institution": "University of Florida - CTSI"
+        },
+        {
+            "name": "Marly Gotti",
+            "email": "marlycormar@ufl.edu",
+            "institution": "University of Florida - CTSI"
         }
     ],
     "system-settings": [
