--- a/config.json
+++ b/config.json
@@ -25,9 +25,42 @@
     ],
     "system-settings": [
         {
+            "name": "Multi Row Response",
+            "key": "multi_row_response",
+            "type": "checkbox"
+        },
+        {
+            "name": "Banner Top Text",
+            "key": "banner_text_top",
+            "type": "rich-text",
+            "branchingLogic": {
+                "conditions":
+                [
+                    {
+                        "field": "multi_row_response",
+                        "value": true
+                    }
+                ]
+            }
+        },
+        {
             "name": "Banner Text",
             "key": "banner_text",
             "type": "rich-text"
+        },
+        {
+            "name": "Banner Bottom Text",
+            "key": "banner_text_bottom",
+            "type": "rich-text",
+            "branchingLogic": {
+                "conditions":
+                [
+                    {
+                        "field": "multi_row_response",
+                        "value": true
+                    }
+                ]
+            }
         },
         {
             "name": "Banner Background Color",
