--- a/config.json
+++ b/config.json
@@ -13,97 +13,105 @@
         }
     ],
     "system-settings": [
-        {
-            "name": "Multi Row Response",
-            "key": "multi_row_response",
-            "type": "checkbox"
-        },
-        {
-            "name": "Banner Top Text",
-            "key": "banner_text_top",
-            "type": "rich-text",
-            "branchingLogic": {
-                "conditions":
-                [
-                    {
-                        "field": "multi_row_response",
-                        "value": true
-                    }
-                ]
-            }
-        },
-        {
-            "name": "Banner Text",
-            "key": "banner_text",
-            "type": "rich-text"
-        },
-        {
-            "name": "Banner Bottom Text",
-            "key": "banner_text_bottom",
-            "type": "rich-text",
-            "branchingLogic": {
-                "conditions":
-                [
-                    {
-                        "field": "multi_row_response",
-                        "value": true
-                    }
-                ]
-            }
-        },
-        {
-            "name": "Banner Background Color",
-            "key": "bg_color",
-            "type": "color-picker"
-        },
-        {
-            "name": "Banner Border Color",
-            "key": "border_color",
-            "type": "color-picker"
-        },
-        {
-            "name": "Criteria for display",
-            "key": "criteria",
-            "type": "dropdown",
-            "choices": [
-                {
-                    "name": "Always display",
-                    "value": "always"
-                },
-                {
-                    "name": "Require a non-empty query result",
-                    "value": "require_result"
-                },
-                {
-                    "name": "Custom query",
-                    "value": "custom"
+    {
+        "key": "banner_settings",
+        "name": "Banner Settings",
+        "type": "sub_settings",
+        "repeatable": true,
+        "sub_settings": [
+            {
+                "name": "Multi Row Response",
+                "key": "multi_row_response",
+                "type": "checkbox"
+            },
+            {
+                "name": "Banner Top Text",
+                "key": "banner_text_top",
+                "type": "rich-text",
+                "branchingLogic": {
+                    "conditions":
+                    [
+                        {
+                            "field": "multi_row_response",
+                            "value": true
+                        }
+                    ]
                 }
-            ]
-        },
-        {
-            "name": "Custom SQL for criteria",
-            "key": "custom_criteria_sql",
-            "type": "textarea",
-            "branchingLogic": {
-                "conditions":
-                [
+            },
+            {
+                "name": "Banner Text",
+                "key": "banner_text",
+                "type": "rich-text"
+            },
+            {
+                "name": "Banner Bottom Text",
+                "key": "banner_text_bottom",
+                "type": "rich-text",
+                "branchingLogic": {
+                    "conditions":
+                    [
+                        {
+                            "field": "multi_row_response",
+                            "value": true
+                        }
+                    ]
+                }
+            },
+            {
+                "name": "Banner Background Color",
+                "key": "bg_color",
+                "type": "color-picker"
+            },
+            {
+                "name": "Banner Border Color",
+                "key": "border_color",
+                "type": "color-picker"
+            },
+            {
+                "name": "Criteria for display",
+                "key": "criteria",
+                "type": "dropdown",
+                "choices": [
                     {
-                        "field": "criteria",
+                        "name": "Always display",
+                        "value": "always"
+                    },
+                    {
+                        "name": "Require a non-empty query result",
+                        "value": "require_result"
+                    },
+                    {
+                        "name": "Custom query",
                         "value": "custom"
                     }
                 ]
+            },
+            {
+                "name": "Custom SQL for criteria",
+                "key": "custom_criteria_sql",
+                "type": "textarea",
+                "branchingLogic": {
+                    "conditions":
+                    [
+                        {
+                            "field": "criteria",
+                            "value": "custom"
+                        }
+                    ]
+                }
+            },
+            {
+                "name": "Custom SQL for data",
+                "key": "custom_data_sql",
+                "type": "textarea"
+            },
+            {
+                "name": "Display on all pages",
+                "key": "display_everywhere",
+                "type": "checkbox"
             }
-        },
-        {
-            "name": "Custom SQL for data",
-            "key": "custom_data_sql",
-            "type": "textarea"
-        },
-        {
-            "name": "Display on all pages",
-            "key": "display_everywhere",
-            "type": "checkbox"
-        }
+        ]
+    }
     ],
     "compatibility": {
         "redcap-version-min": "13.7.0"
